[package]
name = "word_count"
version = "0.1.0"
authors = ["Leander Lismond <Leander@Lismond.be>"]

description = "Count the words in a string."
readme = "README.md"
homepage = "https://github.com/Leo2807/word_count/"
repository = "https://github.com/Leo2807/word_count/"

license = "MIT"

[lib]
name = "lib_word_count"
